Refactor: rename project to `user` (#9)

--- a/src/user/templates/base.html
+++ b/src/user/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Login Service</title>
+  <title>User Service</title>
   <script src="https://unpkg.com/htmx.org@1.9.10"></script>
 </head>
 <body>
